[package]
name = "grind-hacka"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.26.0" 
crossterm = "0.27"
dirs = "5.0"
configparser = "3.1.0"